# theseus-shell

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: MOTIVATION.md
scripts/: convert_to_gif.py  traj_analysis.py
src/: feature_flags.rs  lib.rs  main.rs
src/agent/: compact.rs  core.rs  llm.rs  loops.rs  messages.rs  mod.rs  spinner.rs  status.rs
src/agent/config/: document.rs  interactive.rs  jsonc.rs  mod.rs  model_catalog.rs  models.rs  store.rs
src/agent/mcp/: mod.rs
src/agent/tools/: args.rs  bash.rs  diff.rs  edit_file.rs  mod.rs  paths.rs  read_file.rs  registry.rs  write_file.rs
src/commands/: mod.rs
src/common/: cancellation.rs  info.rs  mod.rs  output.rs  system_tools.rs  terminal_output.rs  text.rs  tmp_files.rs
src/diff_renders/: mod.rs
src/input/: box_text.rs  colorize.rs  completion.rs  constants.rs  dedent.rs  editor_render.rs  highlight.rs  history_browser.rs  key.rs  line_buffer.rs  mod.rs  raw_mode.rs  read_command.rs  read_line.rs  read_multiline.rs  shell_highlight.rs  text_buffer.rs  viewport.rs
src/logging/: mod.rs
src/shell/: command_routing.rs  core.rs  handlers.rs  history.rs  input_syntax.rs  markdown_preprocessor.rs  mod.rs  prompt.rs  render.rs  resume.rs  terminal.rs
src/shell/pty/: input.rs  mod.rs  platform.rs  runner.rs  session.rs
tests/: line_editor_pty.rs  stdout_lock.rs
