[package]
name = "theseus"
version = "0.1.4"
edition = "2024"
rust-version = "1.96.0"

[dependencies]
crossterm = "0.29.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jsonc-parser = { version = "0.32", features = ["cst", "serde"] }
libc = "0.2"
portable-pty = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rmcp = { version = "1.7", default-features = false, features = ["client", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest"] }
rustix = { version = "1.1.4", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
signal-hook = "0.3.18"
syntect = "5.3.0"
termimad = "0.34"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
